Ajusting relation between Truck Factor and Contributor.